[Saumya] Fix. Sidebar icons and text misalignment

--- a/ui/src/app/navbar/navbar.component.css
+++ b/ui/src/app/navbar/navbar.component.css
@@ -48,37 +48,35 @@ a{
 }
 
 
-a:focus {
+.nav-item:active{
   background-color: #22979c;
-}  
-
+}
 
 
 .material-icons{
   font-family: 'Material Icons';
   font-weight: normal;
-  font-style: normal;
   font-size: 24px;  /* Preferred icon size */
-  line-height: 1;
-  text-transform: none;
-  letter-spacing: normal;
-  word-wrap: normal;
-  white-space: nowrap;
-  direction: ltr;
-
-  /* Support for all WebKit browsers. */
-  -webkit-font-smoothing: antialiased;
-  /* Support for Safari and Chrome. */
-  text-rendering: optimizeLegibility;
-
-  /* Support for Firefox. */
-  -moz-osx-font-smoothing: grayscale;
-
-  /* Support for IE. */
-  font-feature-settings: 'liga';
   margin-right: 10px;
+  padding:0;
+  display: inline-block;
+  text-transform: none;
+  letter-spacing: none;
+  word-wrap: none;
+  white-space: pre-line;
+  direction: ltr;
+  
+   /* Support for all WebKit browsers. */
+   -webkit-font-smoothing: antialiased;
+   /* Support for Safari and Chrome. */
+   text-rendering: optimizeLegibility;
+  
 }
+.nav-link{
+  display: inline-flex;
+  line-height: 1.7em;
 
+}
 
 #toggleBtn{
   font-family: 'Material Icons';
